<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layoutPadding"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/title"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/platNoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:autofillHints="Key in your plate number to continue"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/platNo"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textPlateNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="214dp"
        android:layout_marginRight="214dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/carPrice"
        android:inputType="number"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editDownPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="214dp"
        android:layout_marginRight="214dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/downPayment"
        android:inputType="number"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editLoanPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="214dp"
        android:layout_marginRight="214dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/loanPeriod"
        android:inputType="number"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editInterestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="214dp"
        android:layout_marginRight="214dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/interestRate"
        android:inputType="number|numberDecimal"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textDisplayLoan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:gravity="start"
        android:text="@string/displayLoan"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textDisplayInterest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/displayInterest"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textDisplayRepayment"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/displayRepayment"
        android:layout_weight="1"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/buttonCalculate" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:onClick="resetInput"
            android:text="@string/buttonReset" />
    </LinearLayout>
</LinearLayout>